[package]
authors = [
    "The Cortex-M Team <cortex-m@teams.rust-embedded.org>",
    "Jorge Aparicio <jorge@japaric.io>",
]
categories = ["embedded", "hardware-support", "no-std"]
description = "Low level access to Cortex-M processors"
documentation = "https://docs.rs/cortex-m"
keywords = ["arm", "cortex-m", "register", "peripheral"]
license = "MIT OR Apache-2.0"
name = "cortex-m"
readme = "README.md"
repository = "https://github.com/rust-embedded/cortex-m"
version = "0.7.4"
edition = "2021"
rust-version = "1.59"
links = "cortex-m"  # prevent multiple versions of this crate to be linked together

[dependencies]
bitfield = "0.13.2"
critical-section = { version = "0.2", optional = true }
embedded-hal = "0.2.4"
volatile-register = "0.2.0"

[dependencies.serde]
version = "1"
features = [ "derive" ]
optional = true

[features]
cm7 = []
cm7-r0p1 = ["cm7"]
linker-plugin-lto = []
std = []
single-core-critical-section = ["critical-section", "critical-section/custom-impl"]

[workspace]
members = [
    "cortex-m-rt",
    "cortex-m-semihosting",
    "panic-itm",
    "panic-semihosting",
    "testsuite",
    "testsuite/minitest",
    "testsuite/minitest/macros",
    "xtask",
]

[package.metadata.docs.rs]
targets = [
    "thumbv8m.main-none-eabihf",
    "thumbv6m-none-eabi",
    "thumbv7em-none-eabi",
    "thumbv7em-none-eabihf",
    "thumbv7m-none-eabi",
    "thumbv8m.base-none-eabi",
    "thumbv8m.main-none-eabi"
]

[patch.crates-io]
critical-section = { git = "https://github.com/reitermarkus/critical-section", branch = "cortex-m" }
