[workspace]
resolver = "3"
members = [
    "cortex-m",
    "cortex-m/macros",
    "cortex-m-types",
    "cortex-m-rt",
    "cortex-m-rt/macros",
    "cortex-m-semihosting",
    "panic-itm",
    "panic-semihosting",
    "testsuite",
    "testsuite/minitest",
    "testsuite/minitest/macros",
    "xtask",
]
