[package]
authors = [
    "The Embedded Devices Working Group's Arm Team <cortex-m@teams.rust-embedded.org>",
    "Jorge Aparicio <japaricious@gmail.com>",
]
description = "Semihosting for ARM Cortex-M processors"
documentation = "https://docs.rs/cortex-m-semihosting"
keywords = ["semihosting", "arm", "cortex-m"]
categories = ["no-std", "embedded"]
license = "MIT OR Apache-2.0"
name = "cortex-m-semihosting"
readme = "README.md"
repository = "https://github.com/rust-embedded/cortex-m"
version = "0.5.0"
edition = "2021"
rust-version = "1.71"

[features]
jlink-quirks = []
no-semihosting = []

[dependencies]
cortex-m = { path = "../cortex-m", version = ">= 0.5.8, < 0.8" }
critical-section = "1.0.0"
