[package]
description = "Semihosting for ARM Cortex-M processors"
documentation = "https://docs.rs/cortex-m-semihosting"
keywords = ["semihosting", "arm", "cortex-m"]
categories = ["no-std", "embedded"]
license = "MIT OR Apache-2.0"
name = "cortex-m-semihosting"
readme = "README.md"
repository = "https://github.com/rust-embedded/cortex-m"
version = "0.6.0"
edition = "2024"
rust-version = "1.85"

[features]
jlink-quirks = []
no-semihosting = []

[dependencies]
critical-section = "1.0.0"
