[package]
authors = [
    "The Cortex-M Team <cortex-m@teams.rust-embedded.org>",
    "Jorge Aparicio <jorge@japaric.io>",
]
categories = ["embedded", "hardware-support", "no-std"]
description = "Low level access to Cortex-M processors"
documentation = "https://docs.rs/cortex-m"
keywords = ["arm", "cortex-m", "register", "peripheral"]
license = "MIT OR Apache-2.0"
name = "cortex-m"
readme = "README.md"
repository = "https://github.com/rust-embedded/cortex-m"
version = "0.7.7"
edition = "2021"
links = "cortex-m"  # prevent multiple versions of this crate to be linked together
rust-version = "1.61"

[dependencies]
bare-metal = { git = "https://github.com/Sonair-AS/bare-metal.git", branch = "certified_subset" }
critical-section = { git = "https://github.com/Sonair-AS/critical-section.git", branch = "certified_subset" }

volatile-register = { git = "https://github.com/Sonair-AS/volatile-register.git", branch = "certified_subset" }
bitfield = { git = "https://github.com/Sonair-AS/rust-bitfield.git", branch = "certified_subset" }
eh1 = { package = "embedded-hal", git = "https://github.com/Sonair-AS/embedded-hal.git", branch = "certified_subset" }

[dependencies.serde]
version = "1"
features = [ "derive" ]
optional = true

[dependencies.serde_json]
version = "1"
optional = true

[features]
cm7 = []
cm7-r0p1 = ["cm7"]
inline-asm = []
linker-plugin-lto = []
std = []
critical-section-single-core = ["critical-section/restore-state-u32"]
# Deprecated feature from when critical-section was an optional dependency
critical-section = []

certified_subset = [
    "eh1/certified_subset",
    "critical-section/certified_subset",
    "bare-metal/certified_subset",
]

[package.metadata.docs.rs]
targets = [
    "thumbv8m.main-none-eabihf",
    "thumbv6m-none-eabi",
    "thumbv7em-none-eabi",
    "thumbv7em-none-eabihf",
    "thumbv7m-none-eabi",
    "thumbv8m.base-none-eabi",
    "thumbv8m.main-none-eabi"
]
