[package]
authors = [
    "The Embedded Devices Working Group's Arm Team <cortex-m@teams.rust-embedded.org>",
    "Jorge Aparicio <jorge@japaric.io>",
]
categories = ["no-std", "embedded"]
description = "Log panic messages using the ITM (Instrumentation Trace Macrocell)"
documentation = "https://docs.rs/panic-itm"
keywords = ["panic-impl", "panic-handler", "ITM", "ARM", "Cortex-M"]
license = "MIT OR Apache-2.0"
name = "panic-itm"
repository = "https://github.com/rust-embedded/cortex-m"
version = "0.4.2"
edition = "2018"

[dependencies]
cortex-m = { path = "../cortex-m", version = ">= 0.5.8, < 0.8" }
