[package]
authors = [
    "The Cortex-M Team <cortex-m@teams.rust-embedded.org>",
    "Jorge Aparicio <jorge@japaric.io>",
]
categories = ["no-std", "embedded"]
description = "Report panic messages to the host stderr using semihosting"
documentation = "https://docs.rs/panic-semihosting"
keywords = ["panic-handler", "panic-impl", "panic", "semihosting"]
license = "MIT OR Apache-2.0"
name = "panic-semihosting"
repository = "https://github.com/rust-embedded/cortex-m"
version = "0.5.6"

[dependencies]
cortex-m = { path = "..", version = ">= 0.5.6, < 0.8" }
cortex-m-semihosting = { path = "../cortex-m-semihosting", version = ">= 0.3, < 0.5" }

[features]
exit = []
inline-asm = ["cortex-m-semihosting/inline-asm", "cortex-m/inline-asm"]
jlink-quirks = ["cortex-m-semihosting/jlink-quirks"]

[package.metadata.docs.rs]
targets = ["thumbv6m-none-eabi"]
