[package]
categories = ["no-std", "embedded"]
description = "Report panic messages to the host stderr using semihosting"
documentation = "https://docs.rs/panic-semihosting"
keywords = ["panic-handler", "panic-impl", "panic", "semihosting"]
license = "MIT OR Apache-2.0"
name = "panic-semihosting"
repository = "https://github.com/rust-embedded/cortex-m"
version = "0.6.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
cortex-m = { path = "../cortex-m", version = ">= 0.5.6, < 0.8" }
cortex-m-semihosting = { path = "../cortex-m-semihosting", version = ">= 0.5.0, < 0.6" }

[features]
exit = []
jlink-quirks = ["cortex-m-semihosting/jlink-quirks"]

[package.metadata.docs.rs]
targets = ["thumbv6m-none-eabi"]
