[package]
authors = ["The Embedded Devices Working Group's Arm Team<cortex-m@teams.rust-embedded.org>"]
name = "testsuite"
publish = false
edition = "2018"
version = "0.1.0"

[features]
rtt = ["rtt-target", "minitest/rtt"]

[dependencies]
cortex-m-rt.path = "../cortex-m-rt"
cortex-m = { path = "../cortex-m", features = ["critical-section-single-core"] }
minitest.path = "minitest"
critical-section = "1.0.0"
cortex-m-semihosting.path = "../cortex-m-semihosting"
rtt-target = { version = "0.5.0", optional = true }
