[package]
name = "xtask"
version = "0.0.0"
authors = ["The Embedded Devices Working Group's Arm Team<cortex-m@teams.rust-embedded.org>"]
edition = "2021"
publish = false

[[test]]
name = "ci"
harness = false

[dependencies]
ar = "0.8.0"
cortex-m = { path = "../cortex-m", features = ["serde", "std"] }
serde_json = "1"
