[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["embedded", "no-std"]
description = "Attributes re-exported in `cortex-m-rt`"
documentation = "https://docs.rs/cortex-m-rt"
keywords = ["arm", "cortex-m", "runtime", "startup"]
license = "MIT OR Apache-2.0"
name = "cortex-m-rt-macros"
repository = "https://github.com/japaric/cortex-m-rt"
version = "0.6.11"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"

[dependencies.syn]
features = ["extra-traits", "full"]
version = "1.0"

[dev-dependencies]
cortex-m-rt = { path = "..", version = "0.6" }
