[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["embedded", "no-std"]
description = "Attributes re-exported in `cortex-m-rt`"
documentation = "https://docs.rs/cortex-m-rt"
keywords = ["arm", "cortex-m", "runtime", "startup"]
license = "MIT OR Apache-2.0"
name = "cortex-m-rt-macros"
repository = "https://github.com/rust-embedded/cortex-m"
version = "0.7.5"
edition = "2021"
rust-version = "1.61"

[lib]
proc-macro = true

[dependencies]
quote = { git = "https://github.com/Sonair-AS/quote.git" , branch = "certified_subset" }
proc-macro2 = { git = "https://github.com/Sonair-AS/proc-macro2.git" , branch = "certified_subset" }

[dependencies.syn]
features = ["extra-traits", "full"]
git = "https://github.com/Sonair-AS/syn.git"
branch = "certified_subset"
