[package]
name = "cortex-m-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["extra-traits", "full"] }

[dev-dependencies]
macrotest = "1.2.1"

[[bin]]
name = "asm_cfg_fn_test"
test = false
bench = false
path = "test_bin/asm_cfg_fn_test.rs"
